--- a/.github/workflows/reusable-add-reviewer.yml
+++ b/.github/workflows/reusable-add-reviewer.yml
@@ -4,13 +4,13 @@ on:
   workflow_call:
     inputs:
       actors:
-        description: "Target actors (comma separated)"
+        description: Target actors (comma separated)
         type: string
-        default: "dependabot[bot],renovate[bot],github-actions[bot],book000"
+        default: dependabot[bot],renovate[bot],github-actions[bot],book000
       reviewers:
-        description: "Reviewers (comma separated)"
+        description: Reviewers (comma separated)
         type: string
-        default: "book000"
+        default: book000
 
 jobs:
   add-reviewer:
