fix: hadolintでreviewdogのダウンロード失敗するのでやめる

--- a/.github/workflows/reusable-hadolint-ci.yml
+++ b/.github/workflows/reusable-hadolint-ci.yml
@@ -12,14 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: hadolint (push)
+      - name: hadolint
         uses: hadolint/hadolint-action@v3.1.0
-        if: ${{ github.event_name == 'push' }}
         with:
           recursive: true
-
-      - name: hadolint (pull_request)
-        uses: reviewdog/action-hadolint@v1
-        if: ${{ github.event_name == 'pull_request' }}
-        with:
-          fail_on_error: true
