--- a/.github/workflows/reusable-nodejs-ci.yml
+++ b/.github/workflows/reusable-nodejs-ci.yml
@@ -17,6 +17,10 @@ on:
         description: Install apt packages (space separated)
         type: string
         default: ""
+      lock-path:
+        description: yarn.lock path
+        type: string
+        default: "{dir}/yarn.lock"
 
 jobs:
   setup:
@@ -52,12 +56,18 @@ jobs:
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
+      - name: 📂 Set lock path
+        id: lock-path
+        run: |
+          LOCK_PATH=$(echo "${{ inputs.lock-path }}" | sed -e "s/{dir}/${{ matrix.directory }}/g")
+          echo "lock-path=$LOCK_PATH" >> $GITHUB_OUTPUT
+
       - name: 🏗 Setup node
         uses: actions/setup-node@v3
         with:
           node-version-file: ${{ matrix.directory }}/.node-version
           cache: yarn
-          cache-dependency-path: ${{ matrix.directory }}/yarn.lock
+          cache-dependency-path: ${{ steps.lock-path.outputs.lock-path }}
 
       - name: 👨🏻‍💻 Install apt packages
         if: inputs.install-apt-packages != ''
