--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -35,6 +35,8 @@ jobs:
         [
           { imageName: "tomacheese/twitter-dm-memo", context: ".", file: "Dockerfile", packageName: "twitter-dm-memo" }
         ]
+      # registry: registry.hub.docker.com # default: ghcr.io
+      # platforms: linux/amd64 # default: linux/amd64,linux/arm64
     secrets:
       DOCKER_USERNAME: ${{ github.actor }}
       DOCKER_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
