fix: workflow-conclusion-actionの権限がおかしいのを修正

--- a/.github/workflows/reusable-docker.yml
+++ b/.github/workflows/reusable-docker.yml
@@ -223,6 +223,8 @@ jobs:
     needs:
       - calc-version
       - build
+    permissions:
+      actions: read
 
     steps:
       - name: Workflow conclusion
