--- a/.github/workflows/reusable-nodejs-ci.yml
+++ b/.github/workflows/reusable-nodejs-ci.yml
@@ -23,8 +23,8 @@ on:
         default: "{dir}/yarn.lock"
       check-git-diff:
         description: Check git diff
-        type: string
-        default: "false"
+        type: boolean
+        default: false
 
 jobs:
   setup:
@@ -182,7 +182,7 @@ jobs:
           path: ${{ matrix.directory }}/output
 
       - name: 👀 Check git status
-        if: inputs.check-git-status == 'true'
+        if: inputs.check-git-diff == true
         run: |
           git status
           git diff --exit-code || (echo "Git status is not clean." && exit 1)
