--- a/.github/workflows/reusable-nodejs-ci.yml
+++ b/.github/workflows/reusable-nodejs-ci.yml
@@ -21,6 +21,10 @@ on:
         description: yarn.lock path
         type: string
         default: "{dir}/yarn.lock"
+      check-git-diff:
+        description: Check git diff
+        type: boolean
+        default: false
 
 jobs:
   setup:
@@ -176,6 +180,12 @@ jobs:
         with:
           name: ${{ matrix.directory }}-output
           path: ${{ matrix.directory }}/output
+
+      - name: 👀 Check git status
+        if: inputs.check-git-diff == true
+        run: |
+          git status
+          git diff --exit-code || (echo "Git status is not clean." && exit 1)
 
   finished-node-ci:
     name: Check finished Node CI
